# packaging_utils

./: README.md  fastaq_usage_to_man  kmc_usage_to_man  profile_kmc_versions.pl  usage_to_man
lib/Sanger/Debian/CommandLine/: UsageToMan.pm
vagrant_debian_package_builder/: Makefile.am  Vagrantfile
vagrant_debian_package_builder/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  synced_folders
vagrant_debian_package_builder/debian/: changelog  control  watch
vagrant_debian_package_builder/manifests/: debianbvm.pp
vagrant_debian_package_builder/package_builder_setup/: home_pbuilderrc  root_pbuilderrc  sources.list
